<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_setting" android:title="@string/action_music"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_camera1" android:title="@string/action_camera1"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_camera2" android:title="@string/action_camera2"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_desktop" android:title="@string/action_desktop" />
    <item android:id="@+id/action_microphone" android:title="@string/action_microphone" />
    <item android:id="@+id/action_testlayout" android:title="@string/action_testlayout" />


</menu>
